fixed spacing on header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ section {
     margin-top: 35px;
     background:#ffffff;
     text-decoration: none;
-    margin-bottom: 185px; 
+    margin-bottom: 215px; 
 }
 
 .pro {
